Implemented custom Pair class to prevent build work arounds